<resources>
    <string name="app_name">YJFutures</string>
    <string name="permission_deny_message">需要您开启应用需要相应的权限才能更好地为您服务，请点击确定-权限选项中勾选</string>
    <string name="activity_main_stroll">暂不注册</string>
    <string name="activity_login_thirdparty_prompt">社交账号直接登录</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_2">输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_prompt">密码长度为6-16位</string>
    <string name="password_role">请输入6-16个字符</string>
    <string name="input_user">请输入手机号码或邮箱</string>
    <string name="input_prompt">输入提示</string>
    <string name="input_nickname">请输入2-16位昵称</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="register">注册</string>
    <string name="title">标题</string>
    <string name="operate">操作</string>
    <string name="prompt">提示</string>
    <string name="user">用户</string>
    <string name="password">密码</string>
    <string name="remeber_user">记住账户</string>
    <string name="foget_pwd">忘记密码?</string>
    <string name="password_wrong">用户名或者密码错误</string>
    <string name="login_user_pwd_not_null">请输入完整登录信息</string>
    <string name="regster_msg_not_complete">请输入完整注册信息</string>
    <string name="success">成功</string>
    <string name="error">错误</string>
    <string name="fail">失败</string>
    <string name="location">所在地</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_format">手机号&#160;</string>
    <string name="phone_haoma">手机号码</string>
    <string name="phone_old_haoma">原手机号码</string>
    <string name="phone_new_haoma">新手机号码</string>
    <string name="input_password_confirm">确认密码</string>
    <string name="register_agree_protocol">我已经阅读并同意以下协议书条款</string>
    <string name="read_and_agree">我已经阅读并同意</string>
    <string name="please_agree_the_protocol">请同意协议</string>
    <string name="input_confirm_code">请输入验证码</string>
    <string name="register_get_confirm_code">发送\n验证码</string>
    <string name="register_get_confirm_code_again">重新获取验证码</string>
    <string name="confirm_code_send_success">验证码发送成功</string>
    <string name="confirm_code_send_fail">验证码发送失败</string>
    <string name="confirm_code_sending">验证码发送中</string>
    <string name="confirm_send_fail">发送失败</string>
    <string name="password_if_different">两次输入密码不一致，请重新输入</string>
    <string name="phone_num_type_wrong">手机号码格式错误</string>
    <string name="input_wrong_phone_num">请输入正确手机号码</string>
    <string name="input_wrong_phone_email">请输入正确手机号/邮箱</string>
    <string name="password_too_simple">6-20位字母，数字或特殊字符</string>
    <string name="next_step">下一步</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="vification_code_send_after_60s">秒后重发</string>
    <string name="icon_text_mine">我的微博</string>
    <string name="icon_text_social_contact">社交</string>
    <string name="icon_text_news">资讯</string>
    <string name="icon_text_msg">消息</string>
    <string name="trader_name">交易员名字</string>
    <string name="found">发现</string>
    <string name="follow">跟随</string>
    <string name="trader_msg_shouyilv">收益率</string>
    <string name="search">搜索</string>
    <string name="china">中国</string>
    <string name="trade_msg_title">交易员的回报表现</string>
    <string name="trader_msg_shenglv">胜率</string>
    <string name="trader_msg_biannianyingli">半年盈利</string>
    <string name="trader_msg_jiaoyishuliang">交易数量</string>
    <string name="jyss">交易手数</string>
    <string name="trader_msg_leijijingzhi">累计净值</string>
    <string name="trader_msg_zuidakaichangdan">最大开仓单</string>
    <string name="kcsj">开仓时间</string>
    <string name="kcjg">开仓价格</string>
    <string name="kcjg_pcjg">开平仓价格</string>
    <string name="trader_msg_fans">粉丝</string>
    <string name="trader_msg_ykzs">总盈亏</string>
    <string name="zyk">总盈亏</string>
    <string name="yk">盈亏</string>
    <string name="trader_msg_cankaoProfit">收益率</string>
    <string name="trader_msg_ksbl">最大亏损比例</string>
    <string name="trader_msg_dbks">单笔最大亏损</string>
    <string name="trader_msg_jysj">交易时间</string>
    <string name="trader_msg_pjccsj">平均持仓时间</string>
    <string name="trader_msg_gsres">跟随人数</string>
    <string name="server_connect_err">服务器连接失败</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="release_to_load">松开加载</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_footer_hint_ready">准备刷新</string>
    <string name="xlistview_header_last_time">最后更新时间</string>
    <string name="xlistview_header_hint_ready">释放更新</string>
    <string name="xlistview_header_hint_loading">数据加载中</string>
    <string name="no_more_data">已经全部加载完毕</string>
    <string name="trader_detail_ac_title">交易员详细信息</string>
    <string name="activity_trader_detail_celue">策略展示 ▽</string>
    <string name="activity_trader_detail_attention">关注 +</string>
    <string name="plus">+</string>
    <string name="activity_trader_detail_follow">跟随 +</string>
    <string name="follower">跟随者</string>
    <string name="dynamic">动态</string>
    <string name="order">订单</string>
    <string name="order_by">排序</string>
    <string name="reviews">评价</string>
    <string name="profit_msg">收益表</string>
    <string name="view_trader_search_hit">交易员名称</string>
    <string name="earning_time">盈利时间</string>
    <string name="view_trader_search_today">今天盈利</string>
    <string name="view_trader_search_week">上周盈利</string>
    <string name="view_trader_search_month">上月盈利</string>
    <string name="broker_belong">所属经纪商</string>
    <string name="view_trader_search_from_start">自开始起</string>
    <string name="all_brokers">所有经纪商</string>
    <string name="data_is_loading">数据加载中</string>
    <string name="data_load_fail">数据加载失败</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="trader_msg_dbyl">订单盈利</string>
    <string name="buyin">买入</string>
    <string name="hand">手</string>
    <string name="dot">点</string>
    <string name="ticket_number">订单号</string>
    <string name="stop_lose">止损</string>
    <string name="stop_win">止盈</string>
    <string name="interest">利息</string>
    <string name="positions">持仓</string>
    <string name="history">历史</string>
    <string name="arrow">→</string>
    <string name="kaicang">开仓</string>
    <string name="pingcang">平仓</string>
    <string name="network_not_connect">请检查网络连接</string>
    <string name="data_is_null">没有数据</string>
    <string name="not_setting">没有设置</string>
    <string name="circles">圈子</string>
    <string name="i_want_evaluation">我要评价</string>
    <string name="phone_num_illegal">手机号输入不正确</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex_unknown">未知</string>
    <string name="unknown">未知</string>
    <string name="connect_server_fail">连接服务器失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="server_response_fail">发送请求失败</string>
    <string name="set_nick_name">正在设置昵称</string>
    <string name="set_nick_name_success">设置昵称成功</string>
    <string name="set_nick_name_fail">设置昵称失败</string>
    <string name="open_platform_login">第三方登录</string>
    <string name="open_platform_login_success">第三方登录成功，登录后台</string>
    <string name="login_success">登录成功</string>
    <string name="nick_name_repeat">昵称重复，请重新设置</string>
    <string name="choose_country">选择国家</string>
    <string name="all">全部</string>
    <string name="loading_cancel">登录取消</string>
    <string name="loading_error">登录出错,请重试</string>
    <string name="card_num_cannot_empty">证件号码不能为空</string>
    <string name="favorite">收藏</string>
    <string name="forwards">转发</string>
    <string name="ywzf">原文转发</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="title_activity_send_micro_blog">分享到Followme</string>
    <string name="send_micro_blog">发微博</string>
    <string name="say_something">分享新鲜事...</string>
    <string name="say_something_1">说说分享心得...</string>
    <string name="say_something_2">写评论...</string>
    <string name="send">发送</string>
    <string name="emoticons">表情符号</string>
    <string name="often_use">经常使用</string>
    <string name="blog_body_cannot_null">请输入微博内容</string>
    <string name="upload_picture">图片上传中</string>
    <string name="blog_is_sending">微博发送中</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="insert_topic">输入话题</string>
    <string name="choose_attention_user">选择关注人员</string>
    <string name="micro_blog_content">微博正文</string>
    <string name="has_praise">已赞</string>
    <string name="has_favorite">取消收藏</string>
    <string name="froward_simultaneous">同时评论</string>
    <string name="froward_micro_blog">转发微博</string>
    <string name="send_comment">发评论</string>
    <string name="mine">我的</string>
    <string name="to_investor">升级为跟随者</string>
    <string name="to_true_user">开设真实账户</string>
    <string name="micro_blog">微博</string>
    <string name="attention">关注</string>
    <string name="funs">粉丝</string>
    <string name="total_revenue">总利润</string>
    <string name="trading_strategy">交易策略：</string>
    <string name="trading_strategy_empty">暂无交易策略</string>
    <string name="brief_intro">简介：</string>
    <string name="brief_intro_empty">暂无简介</string>
    <string name="cancel_attention">取消关注</string>
    <string name="attention_success">关注成功</string>
    <string name="attention_fail">关注失败</string>
    <string name="cancel_attention_success">取消关注成功</string>
    <string name="simulation_account">模拟账号</string>
    <string name="user_type_normal">普通用户</string>
    <string name="user_type_trader">交易员</string>
    <string name="user_type_investor">跟随者</string>
    <string name="user_type_auth_user">认证用户</string>
    <string name="ranking_list">排行榜</string>
    <string name="cancel_parise">取消赞</string>
    <string name="zero">0</string>
    <string name="zero_dollar">$0.00</string>
    <string name="reply_comment">回复</string>
    <string name="reply">回复</string>
    <string name="hcl">回撤率</string>
    <string name="trader">交易员</string>
    <string name="spread">展开</string>
    <string name="pack_up">收起</string>
    <string name="trader_stategy">交易策略</string>
    <string name="colon">:</string>
    <string name="cross_profit">获利总额：</string>
    <string name="overview">总览</string>
    <string name="jingzhi">净值</string>
    <string name="balance">余额</string>
    <string name="trader_detail">交易明细</string>
    <string name="follow_manage">跟随管理</string>
    <string name="financing_manage">资金管理</string>
    <string name="trader_report">交易报表</string>
    <string name="is_holding">正在持仓</string>
    <string name="historical_order">历史订单</string>
    <string name="zizhuxiadan">自主下单</string>
    <string name="ordering">下单中</string>
    <string name="is_follow">正在跟随</string>
    <string name="has_follow">已跟随</string>
    <string name="history_follow">历史跟随</string>
    <string name="all_follow">所有跟随</string>
    <string name="stategy_1">固定数量</string>
    <string name="stategy_2">按比例</string>
    <string name="multiple">倍</string>
    <string name="positive">正向</string>
    <string name="reverse">反向</string>
    <string name="follow_profit">跟随收益</string>
    <string name="ypcyk">已平仓收益</string>
    <string name="zsy">总收益</string>
    <string name="fdyk">浮动收益</string>
    <string name="confirm">确定</string>
    <string name="activation_code">验证码</string>
    <string name="home_page">首页</string>
    <string name="user_info">个人信息</string>
    <string name="activation_message_code">短信验证码</string>
    <string name="trade">交易</string>
    <string name="main_customer">客服</string>
    <string name="market_quotations">行情</string>
    <string name="symbol">品种</string>
    <string name="set_password">设置密码</string>
    <string name="fund_detail">资金明细</string>
    <string name="risk_info">风险提示</string>
    <string name="about_us">关于我们</string>
</resources>