<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chart_background"
    android:orientation="vertical">

    <com.yjjr.yjfutures.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_title="手机号码修改"/>

    <com.yjjr.yjfutures.widget.RegisterInput
        android:id="@+id/ri_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_bottom_line"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        app:hint="请输入手机号码"
        app:name="@string/phone_number"/>

    <com.yjjr.yjfutures.widget.RegisterInput
        android:id="@+id/ri_smscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_bottom_line"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        app:button_text="@string/register_get_confirm_code"
        app:name="@string/activation_message_code"
        />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_common_btn_bg"
        android:text="@string/confirm"
        android:textColor="@color/selector_common_btn_text_color"/>

</LinearLayout>
