<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjjr.yjfutures.ui.trade.OrderActivity">

    <com.yjjr.yjfutures.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:main_title="@string/symbol"/>


    <com.yjjr.yjfutures.widget.NoTouchScrollViewpager
        android:id="@+id/viewpager"
        app:tabBackground="@color/white"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_market"
            android:layout_width="0dp"
            android:text="@string/market_quotations"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_order"
            android:layout_width="0dp"
            android:text="@string/positions"
            android:layout_height="wrap_content"/>

    </RadioGroup>

</LinearLayout>
