<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chart_background"
    android:orientation="vertical"
    tools:context="com.yjjr.yjfutures.ui.mine.AuthInfoActivity">

    <com.yjjr.yjfutures.widget.HeaderView
        android:id="@+id/header_view"
        app:main_title="@string/auth_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.yjjr.yjfutures.widget.RegisterInput
        android:id="@+id/ri_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/phone_number_format"/>

    <com.yjjr.yjfutures.widget.RegisterInput
        android:id="@+id/ri_smscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="@string/activation_message_code"
        />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/selector_common_btn_text_color"
        android:background="@drawable/selector_common_btn_bg"
        android:text="@string/next_step"/>

</LinearLayout>
