<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yjjr.yjfutures.ui.MainActivity">

    <com.yjjr.yjfutures.widget.NoTouchScrollViewpager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.yinglan.alphatabs.AlphaTabsIndicator
        android:id="@+id/alphaIndicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shape_bg_top_bottom_line"
        android:orientation="horizontal">

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@drawable/ic_account_circle"
            app:tabIconSelected="@drawable/ic_account_circle"
            app:tabText="@string/home_page"
            app:textColorSelected="@color/main_color"/>

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@drawable/ic_account_circle"
            app:tabIconSelected="@drawable/ic_account_circle"
            app:tabText="@string/trade"
            app:textColorSelected="@color/main_color"/>

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@drawable/ic_account_circle"
            app:tabIconSelected="@drawable/ic_account_circle"
            app:tabText="@string/found"
            app:textColorSelected="@color/main_color"/>

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@drawable/ic_account_circle"
            app:tabIconSelected="@drawable/ic_account_circle"
            app:tabText="@string/mine"
            app:textColorSelected="@color/main_color"/>

    </com.yinglan.alphatabs.AlphaTabsIndicator>

</LinearLayout>
